Fixed tapping issue on iOS devices

--- a/_includes/scss/footer.scss
+++ b/_includes/scss/footer.scss
@@ -33,27 +33,29 @@ footer.footer {
     @include z-index-2;
     transition: 500ms $transition-ease-in;
   }
-  &::after {
-    content: '';
-    display: block;
-    height: 1px;
-    width: 0%;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    background: $blue;
-    z-index: 1;
-    transition: 500ms $transition-ease-in;
-    @include z-index-1;
-  }
-  &:hover {
-    a {
-      padding: 0 6px;
-      color: $white;
-    }
+  @media #{$desktop-sm}, #{$desktop}, #{$desktop-xl} {
     &::after {
-      width: 90%;
+      content: '';
+      display: block;
+      height: 1px;
+      width: 0%;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+      background: $blue;
+      z-index: 1;
+      transition: 500ms $transition-ease-in;
+      @include z-index-1;
+    }
+    &:hover {
+      a {
+        padding: 0 6px;
+        color: $white;
+      }
+      &::after {
+        width: 90%;
+      }
     }
   }
 }
